fixed cutoff of about me section

--- a/assets/sass/ie8.scss
+++ b/assets/sass/ie8.scss
@@ -123,7 +123,7 @@ $color-border-ie: #cccccc;
 
 	#footer {
 		background-image: none !important;
-		margin-top: 0 !important;
+		// margin-top: 0 !important;
 		padding: 4em 0 !important;
 		color: _palette(accent1, fg-bold);
 	}
