--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -824,7 +824,7 @@
 			add additional top padding (to move our content out of its way)
 			and a negative margin (to move everything up a bit).
 		*/
-		margin-top: -260px;
+		// margin-top: -260px;
 		padding: calc(460px + 6em) 0 10em 0;
 
 		position: relative;
